# opencl_cmake

./: .gitignore  CMakeLists.txt  CMakeSettings.json
opencl/: CMakeLists.txt  code_load.cpp  error_treatment.h  gemm.h  main.cpp  opencl.cpp  opencl.h
